<resources>
    <string name="app_name">S Music</string>
    <string name="facebook_app_id">236147570203063</string>
    <string name="playing_title">Now Playing</string>
    <string name="stream">STREAM</string>
    <string name="stream_small">Stream</string>
    <string name="my_library">MY LIBRARY</string>
    <string name="my_library_small">My Library</string>
    <string name="my_songs">My Songs</string>
    <string name="favorites">Favorites</string>
    <string name="recently_play">Recently\nPlayed</string>
    <string name="folder">Folder</string>
    <string name="artists">Artists</string>
    <string name="random_play">Shuffle Play</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="like_us">Like Us</string>
    <string name="invite_friends">Share</string>
    <string name="settings">Settings</string>
    <string name="new_playlist">PLAYLIST</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_small">Cancel</string>
    <string name="confirm">CONFIRM</string>
    <string name="create_name">Create Name</string>
    <string name="ignore_tracks">Ignore Short Tracks</string>
    <string name="less_seconds">Less Than 60 Seconds</string>
    <string name="feedback">Feedback</string>
    <string name="update">Update</string>
    <string name="about_us">About us</string>
    <string name="share_title">SHARE</string>
    <string name="share_content">I found a great music player，let\'s download it and play free music now！https://play.google.com/store/apps/details?id=app.smusic.android</string>
    <string name="create">Create</string>
    <string name="menu_create_success">Create success</string>
    <string name="menu_exist">The playlist already exists</string>
    <string name="song_exist">Already add to the playlist</string>
    <string name="song_create_success">Add success</string>
    <string name="songs">Songs</string>
    <string name="of">of</string>
    <string name="network_error">No network</string>
    <string name="file_error">File not found</string>
    <string name="unknow_error">Unknown error</string>
    <string name="rename">Rename</string>
    <string name="rename_success">Rename success</string>
    <string name="rename_failed">Rename failed</string>
    <string name="name_success">Rename success</string>
    <string name="artist_success">Rename success</string>
    <string name="delete_success">Delete success</string>
    <string name="delete_failed">Delete failed</string>
    <string name="delete_playlist">Confirm to delete this playlist?</string>
    <string name="add_to_next_song">Add to the Next Song</string>
    <string name="song_info">Song details</string>
    <string name="delete">Delete</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="information_song">INFORMATION OF  SONG</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="time">Time</string>
    <string name="capacity">Capacity</string>
    <string name="sleep">SLEEP TIME</string>
    <string name="sleep_one">20 Minutes Later</string>
    <string name="sleep_two">30 Minutes Later</string>
    <string name="sleep_three">60 Minutes Later</string>
    <string name="minutes_later">Minutes Later</string>
    <string name="sleep_four">Customize Time</string>
    <string name="sleep_five">Sleep Timer off</string>
    <string name="later_closed">later it will be closed</string>
    <string name="sleep_time_limit">1-720</string>
    <string name="no_network_content">Please connect to the internet and try again</string>
    <string name="refresh">Refresh</string>
    <string name="search_songs_artists">Search for songs, artists</string>
    <string name="see_all">See All</string>
    <string name="style_content">Many genres of music</string>
    <string name="playlist">PLAYLIST</string>
    <string name="select_all">Select all</string>
    <string name="hot_title">Up and coming songs on the music app</string>
    <string name="hot_tips">The most rank around world on the music app</string>
    <string name="no_result">No result</string>
    <string name="about_title">ABOUT US</string>
    <string name="new_and_hot">New &amp; Hot</string>
    <string name="rank">Rank</string>
    <string name="genres">Genres</string>

    <string name="evalution">Thank you for your evalution</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version">Already is the latest version</string>
    <string name="songs1"> Songs</string>
    <string name="songs2"> Song</string>
    <string name="remove_song">Are you sure to remove songs from the playlist</string>
    <string name="delete_song">Are you sure to delete this song file from your device</string>
    <string name="tag_music_image">tag_music_image</string>
    <string name="tag_music_bg">tag_music_bg</string>
    <string name="tag_play_next">tag_play_next</string>
    <string name="tag_play_pause">tag_play_pause</string>
    <string name="tag_add_to_play_list">add_to_play_List</string>
    <string name="tag_play_prev">tag_play_prev</string>
    <string name="tag_play_mode">tag_play_mode</string>
    <string name="tag_title">tag_title</string>
    <string name="tag_singer">tag_singer</string>
    <string name="tag_cd_bg">tag_cd_bg</string>
    <string name="no_more">no more</string>
    <string name="add_failed">Add failed</string>
    <string name="audio_tips">many genres of audio </string>
    <string name="audio_content">enjoy the best audio</string>
    <string name="permission_tips">To preferably read the music documents from local files , please find and enable S Music.</string>
    <string name="got_it">Got it</string>
    <string name="ad">AD</string>
    <string name="download">Download</string>
    <string name="unlock">Slide Unlock</string>
    <string name="audio">Audio</string>
    <string name="love_app">LOVE APP?</string>
</resources>
