<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:background="@drawable/shape_create_playlist"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#2B2B2B" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="center"
            android:text="@string/delete_playlist"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#2B2B2B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_left" />
            </RelativeLayout>


            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="13dp"
                android:layout_marginTop="13dp"
                android:background="#2B2B2B" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_right" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>