<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:scaleType="centerInside"
            android:src="@drawable/selector_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="17sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="26dp"
                android:text="@string/ignore_tracks"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="52dp"
                android:text="@string/less_seconds"
                android:textColor="#8e8e8e"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/toggle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:scaleType="centerInside"
                android:src="@drawable/toggle_open" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#2B2B2B" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="53dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/feedback"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/feedBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_recycleview_item" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#2B2B2B" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="53dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="center_vertical"
                android:paddingLeft="24dp"
                android:text="@string/privacy_policy"
                android:textColor="#ffffff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_recycleview_item" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#2B2B2B" />
    </LinearLayout>
</LinearLayout>