<?xml version="1.0" encoding="utf-8"?>
<com.music.android.ui.widgets.DrawerLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="238dp"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="223dp"
        android:layout_height="match_parent"
        android:background="@drawable/menu_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="17dp"
            android:paddingTop="70dp"
            android:src="@drawable/menu_pic"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="17.5dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/llSleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep_time"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:drawablePadding="21dp"
                android:drawableLeft="@drawable/selector_sleep"
                android:paddingBottom="18dp"
                android:paddingLeft="15dp"
                android:paddingTop="18dp"/>



            <LinearLayout
                android:id="@+id/sleepTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="41dp"
                    android:background="@drawable/shape_sleep_time"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:text="@string/sleep_time"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:id="@+id/tvTime"
                    android:drawablePadding="20dp"
                    android:drawableLeft="@drawable/selector_sleep"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="5dp"/>
            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/llLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_like"
            android:drawablePadding="21dp"
            android:paddingBottom="18dp"
            android:paddingLeft="15dp"
            android:paddingTop="18dp"
            android:text="@string/like_us"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/llInvite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_share"
            android:drawablePadding="21dp"
            android:paddingBottom="17dp"
            android:paddingLeft="15dp"
            android:paddingTop="17dp"
            android:text="@string/invite_friends"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/llSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/selector_settins"
            android:drawablePadding="21dp"
            android:paddingBottom="28dp"
            android:paddingLeft="15dp"
            android:paddingTop="18dp"
            android:text="@string/settings"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <View
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:id="@+id/mar"
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/menu_shadow" />
</com.music.android.ui.widgets.DrawerLinearLayout>